--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,13 +3,15 @@ http{
         listen 80;
         listen [::]:80;
 
-        include /etc/nginx/mime.types;
-
-        root /usr/share/nginx/html;
-        index index.html index.html;
+        include /etc/nginx/mime.types;;
 
         location / {
+            root /usr/share/nginx/html;
+            index index.html index.html
             try_files $uri $uri/ /index.html;
+        }
+        location /ws {
+            proxy_pass http://node-app:8080;
         }
     }
 }
