--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: "3"
 services:
   node-app:
     build: ./server
-    ports:
-      - "8080:8080"
+    restart: unless-stopped
   nginx:
     image: nginx:stable-alpine
     volumes:
@@ -11,3 +10,6 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80"
+    restart: unless-stopped
+    depends_on:
+      - node-app
