nginx.conf correccion

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,11 +3,11 @@ http{
         listen 80;
         listen [::]:80;
 
-        include /etc/nginx/mime.types;;
+        include /etc/nginx/mime.types;
 
         location / {
             root /usr/share/nginx/html;
-            index index.html index.html
+            index index.html index.html;
             try_files $uri $uri/ /index.html;
         }
         location /ws {
