--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http{
             try_files $uri $uri/ /index.html;
         }
         location /ws {
-            proxy_pass http://node-app:8080;
+            proxy_pass ws://node-app:8080;
         }
     }
 }
