--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,8 @@ http{
         listen 80;
         listen [::]:80;
 
+        server_name emjam.nicolasdeheza.com;
+
         include /etc/nginx/mime.types;
 
         root /usr/share/nginx/html;
@@ -10,6 +12,10 @@ http{
 
         location / {
             try_files $uri $uri/ /index.html;
+        }
+        location ~ /.well-known/acme-challenge {
+            allow all;
+            root /var/www/html;
         }
     }
 }
