--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    networks:
+      - app-network
   nginx:
     image: nginx:stable-alpine
     volumes:
@@ -17,6 +19,8 @@ services:
     restart: unless-stopped
     depends_on:
       - node-app
+    networks:
+      - app-network
   certbot:
     image: certbot/certbot
     volumes:
@@ -35,3 +39,6 @@ volumes:
       type: none
       device: /home/ubuntu/emJam/client/build/
       o: bind
+networks:
+  app-network:
+    driver: bridge
