nginx.conf challeng root

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http{
         }
         location ~ /.well-known/acme-challenge {
             allow all;
-            root /var/www/html;
+            root /usr/share/nginx/html;
         }
     }
 }
