--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - web-root:/var/www/html
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/var/www/html --email nicolasdeheza@hotmail.com --agree-tos --no-eff-email --staging -d emjam.nicolasdeheza.com
+    command: certonly --webroot --webroot-path=/var/www/html --email nicolasdeheza@hotmail.com --agree-tos --no-eff-email --force-renewal -d emjam.nicolasdeheza.com
 volumes:
   certbot-etc:
   certbot-var:
