--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,10 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
+      - dhparam:/etc/ssl/certs
     ports:
       - "80:80"
+      - "443:443"
     restart: unless-stopped
     depends_on:
       - node-app
@@ -42,3 +44,9 @@ volumes:
 networks:
   app-network:
     driver: bridge
+dhparam:
+  driver: local
+  driver_opts:
+    type: none
+    device: /home/ubuntu/emJam/dhparam/
+    o: bind
