--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,8 +22,8 @@ http{
 
         server_tokens off;
 
-        ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/emjam.nicolasdeheza.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/emjam.nicolasdeheza.com/privkey.pem;
 
         ssl_buffer_size 8k;
 
