--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"cSpell.ignoreWords": ["uuidv"],
+	"cSpell.ignoreWords": ["Reducer", "Reducers", "drums", "reducers", "uuidv", "waves"],
 	"cSpell.words": [
 		"consts",
 		"emjam",
