--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,44 @@
 {
-	"cSpell.ignoreWords": ["Reducer", "Reducers", "drums", "reducers", "uuidv", "waves"],
+	"cSpell.ignoreWords": [
+		"Both",
+		"Each",
+		"Here",
+		"Reducer",
+		"Reducers",
+		"allows",
+		"audiocontext",
+		"automatically",
+		"begins",
+		"circle",
+		"coming",
+		"deformed",
+		"drum",
+		"drums",
+		"each",
+		"full",
+		"here",
+		"instrument",
+		"instruments",
+		"larger",
+		"made",
+		"music",
+		"oscillators",
+		"people",
+		"play",
+		"receives",
+		"reducers",
+		"shown",
+		"some",
+		"sound",
+		"synthesizer",
+		"technologys",
+		"that",
+		"them",
+		"uuidv",
+		"waves",
+		"will",
+		"works"
+	],
 	"cSpell.words": [
 		"consts",
 		"emjam",
